--- a/renderers/settings.html
+++ b/renderers/settings.html
@@ -79,13 +79,13 @@
                     <div class="container">
                       <div class="row">
                         <div class="col">
-                          <button type="button" class="btn btn-secondary">-1 </button>
+                          <button type="button" class="btn btn-secondary" onclick="minusCurrent()">-1 </button>
                         </div>
                         <div class="col-5">
-                          <input class="form-control" type="text" placeholder="0" readonly>
+                          <input class="form-control" type="number" id="form_DashCurrent" value="150" readonly>
                         </div>
                         <div class="col">
-                          <button type="button" class="btn btn-primary"> +1 </button>
+                          <button type="button" class="btn btn-primary" onclick="addCurrent()"> +1 </button>
                         </div>
                       </div>
                       
@@ -93,7 +93,7 @@
 
                       <div class="row">
                         <div class="col">
-                          <div class="alert alert-warning" role="alert">
+                          <div class="alert alert-warning" id="dash_Alert" role="alert">
                             Almost Full!
                           </div>
                         </div>
