[FEAT] Implemented json database
Implemented json database functionality to store user settings

--- a/renderers/settings.html
+++ b/renderers/settings.html
@@ -210,4 +210,5 @@
   <script src="../assets/dashboard.js"></script></body>
 
   <script src="settings.js"></script>
+  <script src="../services/db-service.js"></script>
 </html>
