--- a/renderers/dashboard.html
+++ b/renderers/dashboard.html
@@ -79,13 +79,13 @@
                     <div class="container">
                       <div class="row">
                         <div class="col">
-                          <button type="button" class="btn btn-secondary">-1 </button>
+                          <button type="button" class="btn btn-secondary" onclick="minusCurrent()">-1 </button>
                         </div>
                         <div class="col-5">
-                          <input class="form-control" type="text" placeholder="0" readonly>
+                          <input class="form-control" type="number" id="form_DashCurrent"  readonly>
                         </div>
                         <div class="col">
-                          <button type="button" class="btn btn-primary"> +1 </button>
+                          <button type="button" class="btn btn-primary" onclick="addCurrent()"> +1 </button>
                         </div>
                       </div>
                       
@@ -93,14 +93,14 @@
 
                       <div class="row">
                         <div class="col">
-                          <div class="alert alert-warning" role="alert">
+                          <div class="alert alert-warning" id="dash_Alert" role="alert">
                             Almost Full!
                           </div>
                         </div>
                       </div>
                     </div>
-                </a>
-              </li>
+                  </a>
+                </li>
             </span>
             </ul>
 
@@ -178,5 +178,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
   <script src="../assets/dashboard.js"></script></body>
 
+  <script src="../services/db-service.js"></script>
   <script src="home.js"></script>
+  
 </html>
